<resources>
    <string name="app_name">Notes for Android</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="save">SAVE</string>
    <string name="write_your_note_here_then_hit_save">Write your note here then click the save icon above.</string>
    <string name="enter_a_title">Enter a Title</string>
    <string name="notemaker">Note App</string>
    <string name="title_activity_list">Menu</string>
    <string name="save_note_return_to_list">Save the note and return to list</string>
    <string name="title_activity_settings">Settings</string>
    <string name="add_contact">New Note</string>
    <string name="empty_note">Lors epsum oprotunet skopstompem reevelenas tos vuptum</string>
    <string name="no_subject">no subject</string>
    <string name="note_name">Note Name</string>
    <string name="delete">DELETE</string>
    <string name="theme_selector">THEME SELECTOR</string>
    <string name="priority_level">Set Priority Level</string>
    <string name="head_in_the_clouds">Head In The Clouds (Default)</string>
    <string name="settings_controls">Settings</string>
    <string name="navbarImageButtonSettingContDescrip">The NavBar ImageButton for Settings Screen</string>
    <string name="navbarImageButtonNoteContentDescrip">The NavBar ImageButton for Edit Note Screen</string>
    <string name="navbarImageBttonListContentDesc">The NavBar ImageButton for Note List Screen</string>
    <string name="SORT_BY_PREF_ID">sort.by.preference</string>
    <string name="SORT_ORDER_PREF_ID">sort.order.preference</string>
    <string name="SORT_BY_DATE">datecreated</string>
    <string name="SORT_BY_PRIORITY">priority</string>
    <string name="SORT_BY_NAME">notename</string>
    <string name="SORT_ORDER_HIGH_TO_LOW">DESC</string>
    <string name="SORT_ORDER_LOW_TO_HIGH">ASC</string>
    <string name="SORT_CATEGORY_BY_PREF_ID">noteCategory.sort.by.preference</string>
    <string name="SORT_CATEGORY_ORDER_PREF_ID">noteCategory.sort.order.preference</string>
    <string name="CATEG_LIST_HIDE_DEFAULT_CATEGORY_PREF_ID">noteCategory.hide.allNotes.category.preference</string>
    <string name="showAllNotes">Show</string>
    <string name="hideAllNotes">Hide</string>
    <string name="ascending">Low to High</string>
    <string name="descending">High to Low</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="priority">Priority</string>
    <string name="date_created">Date Created</string>
    <string name="SORT_BY">Sort By:</string>
    <string name="SORT_ORDER">Sort Order:</string>
    <string name="settings_navigation_button_conent_desc">Settings Navigation Button</string>
    <string name="create_a_new_note_navigation_button">Create a New Note Navigation Button</string>
    <string name="list_of_notes_navigation_button">List of Notes navigation button</string>
    <string name="title_activity_settings2">SettingsActivity2</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="Notes_list_set">Notes List Settings</string>
    <string name="categ_list_settings">Category List Settings</string>
    <string name="settings">Settings</string>
    <string name="note_list">Note List</string>
    <string name="new_note">New Note</string>
    <string name="navigate_to_the_settings_menu">Navigate to the Settings Menu</string>
    <string name="navigate_to_the_new_note_activity">Navigate to the new Note activity</string>
    <string name="navigate_to_the_notes_list">Navigate to the Notes list</string>
    <string name="d_a_t_e">DATE</string>
    <string name="the_note_preview_in_list_mode">The note preview in list mode</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Notes</string>
    <string name="nav_header_subtitle">By: harrydulaney.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="NOTE_ID_KEY">note.id.constant.key</string>
    <string name="CATEGORY_ID_KEY">noteCategory.id.constant.key</string>
    <string name="SIGNED_OUT_RESTART_ACTIVITY">com.ethical_techniques.notemaker.ShowSuccessfulSignOutSnackbar</string>
    <string name="CURR_CATEGORY_IN_LIST_KEY">com.ethical_techniques.notemaker.CurrentlyDisplayedNoteCategoryInList</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="delete_button_for_this_note">Delete button for this note</string>
    <string name="edit_list">EDIT</string>
    <string name="my_notes">All Notes</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="sync">Login/Sync</string>
    <string name="export">Export</string>
    <string name="connect">Connect</string>
    <string name="android_studio">Notes For Android</string>
    <string name="the_main_image_displayed_in_the_navigation_drawer">The main image displayed in the navigation drawer</string>
    <string name="title_note_activity">New Note</string>
    <string name="press_editable">Press this to activate the editable features of the list items like Delete-Item and Re-Order</string>
    <string name="create_edit_categories">Create/Edit Categories</string>
    <string name="select_a_category">Select Category</string>
    <string name="undefined">Undefined</string>
    <string name="filler"><![CDATA[&*&***@]]></string>
    <string name="new_category">New Category</string>
    <string name="create_new_category">Create New Category</string>
    <string name="title">Title</string>
    <string name="category_list_title">Categories</string>
    <string name="category_name">Category Name</string>
    <string name="choose_a_color">Pick a Color</string>
    <string name="pickcolor">Pick a Color</string>
    <string name="pick_a_color">Pick a color:</string>
    <string name="cancel">CANCEL</string>
    <string name="localMode">CONTINUE WITHOUT SYNC</string>
    <string name="register_new_user">Register</string>
    <string name="create_account">Create Account</string>
    <string name="no_category">No Category</string>
    <string name="clearform">Clear Form</string>
    <string name="colors">Colors</string>
    <string name="title_activity_create_category">CreateCategoryActivity</string>
    <string name="enter_category_name">Enter a name for this noteCategory</string>
    <string name="category_color">Category Color</string>
    <string name="open_this_note_for_editing">Open this note for editing</string>
    <string name="select_and_deselect_this_note_as_high_priority">Select and deselect this note as high priority</string>
    <string name="backbutton">Back Button</string>
    <string name="empty_note_list_message_p1">Looks like you don\'t have any notes yet. 	&#10; &#10; Press the Add Note button below to start creating notes. &#10; Or to import notes open the navigation drawer and sync an existing account.</string>
    <string name="empty_note_list_message_p2">Or just start creating notes! &#10; Press the icon at the bottom right side of the screen to go to your NotePad. </string>
    <string name="login_title_activity">Login and Sync</string>
    <string name="easylogin">Easy Login</string>
    <string name="googleIcon">Google Icon</string>
    <string name="title_activity_user_login">Sign In</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="cloud_sync_empty_list_image">Cloud Sync Empty list message image</string>
    <string name="password">Password</string>
    <string name="email_login_header">Sign-in to your Notes-For-Android account</string>
    <string name="register_user_header">Register a new user account to enable syncing notes across your devices</string>
    <string name="pw_title_require">Passwords must have:</string>
    <string name="email_emailaddress_com">ex: example@email.com</string>
    <string name="pword_example">ex: yDikj83K$L7</string>
    <string name="create_pword">New Password</string>
    <string name="confirm_pword">Confirm Password</string>
    <string name="login">LOGIN</string>
    <string name="alternatively">Alternatively</string>
    <string name="or">OR</string>
    <string name="login_using_a_google_account">Login Using A Google Account</string>
    <string name="logout">Sign Out</string>
    <string name="submit">submit</string>
    <string name="re_type_password">Re-Type Password</string>
    <string name="cancel_login_activity">Cancel Login Activity</string>
    <string name="cloud_account">Cloud Account Status</string>
    <string name="users_picture">users picture from cloud account import</string>
    <string name="avatar_icon">Avatar icon</string>
    <string name="itemLoginMenuSkip">Skip to Notes</string>
    <string name="OR">or</string>
    <string name="pword_req_list">- At least 8 characters and at most 20\n- At least one digit\n- At least one UPPER case letter\n- At least one lower case letter\n- At least one special character ex: !@#$%*()-+=^\n- No white space</string>
    <string name="empty_string" />
    <string name="avatar_of_user">Avatar of user</string>
    <string name="signed_out">Signed Out</string>
    <string name="input_the_display_name_you_want_to_use_below">Input the display name you want to use below.</string>
    <string name="display_name">Display Name</string>
    <string name="imageview_empty_list">Imageview empty list</string>
    <string name="update_profile_header">Edit User Profile</string>
    <string name="example_username">ex: LakersFan132</string>
    <string name="contentDesc_ProfileImageSet">Users Display Image for Firebasre Profile</string>
    <string name="change">Change</string>
    <string name="cancel_exit">Cancel</string>
    <string name="error_message1">Oops..Something Went Wrong</string>
    <string name="nav_drawer_username_default">Display Name</string>
    <string name="LAUNCH_MESSAGE_KEY">com.ethical_techniques.notemaker.showLoginDecisionDialog</string>
    <string name="no_email_set">No Email Set</string>
    <string name="verify">Verify</string>
    <string name="emailChange_ui_header">Enter the following fields and hit submit to change your the email address we use to link you to your account.</string>
    <string name="new_email_address">New Email Address</string>
    <string name="re_type_new_email">Re-Type New Email</string>
    <string name="done">done</string>
    <string name="launch_key">com.ethical_techniques.notemaker.showLoginDecisionDialog</string>
    <string name="pref_key_local_mode">com.ethical_techniques.user.pref.key.local.mode</string>
    <string name="login_bundle_key">com.ethical_techniques.notemaker.FirebaseUser</string>
    <string name="user_bundle_key">com.ethical_techniques.notemaker.UserProfile</string>
    <string name="colorpicker">colorpicker</string>
    <string name="edit_account_info">Edit Account Info</string>
</resources>