<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/ThemeOverlay.MaterialComponents.Dark">
    <!-- New Note -->
    <item
        android:id="@+id/action_bar_new"
        android:contentDescription="@string/navigate_to_the_new_note_activity"
        android:icon="@drawable/baseline_note_add_white_24dp"
        android:title="@string/new_note"
        app:showAsAction="ifRoom" />

    <!-- List -->
    <item
        android:id="@+id/action_bar_list"
        android:contentDescription="@string/navigate_to_the_notes_list"
        android:icon="@drawable/sharp_view_list_white_24dp"
        android:title="@string/note_list"
        app:showAsAction="ifRoom" />

    <!-- Settings -->
    <item
        android:id="@+id/action_bar_settings"
        android:contentDescription="@string/navigate_to_the_settings_menu"
        android:icon="@drawable/sharp_tune_white_24dp"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />

</menu>
