<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:theme="@style/Theme.MaterialComponents.Dialog.MinWidth"
    tools:context=".frags.NotePopUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/mediumMargin">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/notepopup_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/smallMargin"
            android:text="@string/note_name"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dateCreated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/smallMargin"
            android:text="@string/date_created"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            app:layout_constraintTop_toBottomOf="@id/notepopup_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/noteTextBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/mediumMargin"
            android:minHeight="100dp"
            android:padding="@dimen/mediumMargin"
            android:scrollHorizontally="true"
            android:text="@string/the_note_preview_in_list_mode"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintTop_toBottomOf="@id/dateCreated" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/largeMargin"
            android:layout_marginTop="@dimen/smallMargin"
            android:text="@string/edit_list"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/noteTextBody" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/doneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/smallMargin"
            android:layout_marginEnd="@dimen/largeMargin"
            android:text="@string/done"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/noteTextBody" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>